added while loop

--- a/comp-phys-wk2.ipynb
+++ b/comp-phys-wk2.ipynb
@@ -11,7 +11,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "With the for loop, the sum is 1.64393456668\n"
+      "With the for loop, the sum is 1.64393456668\n",
+      "correct answer: 1.64493406685\n"
      ]
     }
    ],
@@ -23,7 +24,11 @@
     "for i in range(max):\n",
     "    s += 1./(i+1)**2\n",
     "    \n",
-    "print 'With the for loop, the sum is', s"
+    "print 'With the for loop, the sum is', s\n",
+    "\n",
+    "# correct answer is pi^2/6. Let's see how close we get:\n",
+    "\n",
+    "print 'correct answer:', pi**2/6\n"
    ]
   }
  ],
