--- a/comp-phys-wk2.ipynb
+++ b/comp-phys-wk2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -12,6 +12,7 @@
      "output_type": "stream",
      "text": [
       "With the for loop, the sum is 1.64393456668\n",
+      "With the while loop, the sum is 1.64393456668\n",
       "correct answer: 1.64493406685\n"
      ]
     }
@@ -26,6 +27,15 @@
     "    \n",
     "print 'With the for loop, the sum is', s\n",
     "\n",
+    "\n",
+    "i = 1\n",
+    "s = 0\n",
+    "\n",
+    "while i <= max:\n",
+    "    s += 1./i**2\n",
+    "    i = i+1\n",
+    "    \n",
+    "print 'With the while loop, the sum is', s    \n",
     "# correct answer is pi^2/6. Let's see how close we get:\n",
     "\n",
     "print 'correct answer:', pi**2/6\n"
