--- a/comp-phys-wk2.ipynb
+++ b/comp-phys-wk2.ipynb
@@ -187,7 +187,7 @@
     "    F = (9./5)*C + 32.\n",
     "    print '%5d %5.1f' % (C, F)\n",
     "    C = C+5\n",
-    "    \n",
+    "#teehee   \n",
     "    "
    ]
   },
