--- a/comp-phys-wk2.ipynb
+++ b/comp-phys-wk2.ipynb
@@ -193,12 +193,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "r == a: True\n",
+      "r is a: False\n",
+      "s == a: True\n",
+      "s is a: True\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [1,2,3,4,5,6,7,8,9,10]\n",
+    "r = a[:]\n",
+    "s = a\n",
+    "print 'r == a:', r == a\n",
+    "print 'r is a:', r is a\n",
+    "print 's == a:', s == a\n",
+    "print 's is a:', s is a\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c == a: True\n",
+      "c is a: False\n"
+     ]
+    }
+   ],
+   "source": [
+    "import copy\n",
+    "c = copy.copy(a)\n",
+    "print 'c == a:', c == a\n",
+    "print 'c is a:', c is a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 140000.0, 140000.0]\n",
+      "r: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+      "s: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 140000.0, 140000.0]\n",
+      "c: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 140000.0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a.append(1.4e5)\n",
+    "print 'a:', a\n",
+    "print 'r:', r\n",
+    "print 's:', s\n",
+    "print 'c:', c\n"
+   ]
   }
  ],
  "metadata": {
