--- a/comp-phys-wk2-2.ipynb
+++ b/comp-phys-wk2-2.ipynb
@@ -233,6 +233,181 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-5.0, 23.0],\n",
+      " [-4.5, 23.9],\n",
+      " [-4.0, 24.8],\n",
+      " [-3.5, 25.7],\n",
+      " [-3.0, 26.6],\n",
+      " [-2.5, 27.5],\n",
+      " [-2.0, 28.4],\n",
+      " [-1.5, 29.3],\n",
+      " [-1.0, 30.2],\n",
+      " [-0.5, 31.1],\n",
+      " [0.0, 32.0],\n",
+      " [0.5, 32.9],\n",
+      " [1.0, 33.8],\n",
+      " [1.5, 34.7],\n",
+      " [2.0, 35.6],\n",
+      " [2.5, 36.5],\n",
+      " [3.0, 37.4],\n",
+      " [3.5, 38.3],\n",
+      " [4.0, 39.2],\n",
+      " [4.5, 40.1],\n",
+      " [5.0, 41.0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pprint import pprint\n",
+    "pprint(table1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16\n",
+      "  3.0  37.4\n",
+      "  3.5  38.3\n",
+      "  4.0  39.2\n",
+      "  4.5  40.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "print Cdegrees.index(3.0)\n",
+    "\n",
+    "for C, F in table1[Cdegrees.index(3.):Cdegrees.index(5.)]:\n",
+    "    print '{:5.1f} {:5.1f}'.format(C,F)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  12   16   11   12\n",
+      "   9\n",
+      "   6    9   11   14   17   15   14   20\n"
+     ]
+    }
+   ],
+   "source": [
+    "scores = []\n",
+    "scores.append([12,16,11,12])\n",
+    "scores.append([9])\n",
+    "scores.append([6,9,11,14,17,15,14,20])\n",
+    "\n",
+    "for p in scores:\n",
+    "    for g in p:\n",
+    "        print '{:4d}'.format(g),\n",
+    "    print\n",
+    "        \n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "('shark', 2, 'text.txt', 6.0, 4, 5, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#CANNOT CHANGE ELEMENTS IN A TUPLE!!!\n",
+    "t = ('shark', 2, 'text.txt', 6.0)\n",
+    "print t[1]\n",
+    "t = t + (4,5)\n",
+    "t = t + (3,)\n",
+    "print t"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "4\n",
+      "['shark', 4, 'text.txt', 6.0, 4, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "t = ['shark', 2, 'text.txt', 6.0]\n",
+    "print t[1]\n",
+    "t[1] = 4\n",
+    "print t[1]\n",
+    "t = t + [4,5]\n",
+    "print t"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "50.0"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def F(C):\n",
+    "    return (9./5)*C + 32.\n",
+    "a = 10.\n",
+    "F1 = F(a)\n",
+    "F1"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
