--- a/HW1.ipynb
+++ b/HW1.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:0a1f4b7ccf6d0f4297d0dfc997013cb04bd7f3dc525fa1db3f417f4e4af5e243"
+  "signature": "sha256:927d1d46ac42bbafe8600a4972af24e3a7734528d570df534e0597f4260976be"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -30,6 +30,8 @@
       "        return abs(total-last_total)/total\n",
       "\n",
       "# integral = dy*(h(y+(dy/2)) + h(y-(dy/2))/2 for trapezoidal approximation\n",
+      "# integral = dy*(h(y+dy/2)) for rectaungular\n",
+      "# integral = (dy/6)*(h(y) +h(y+dy) +4*(2y+dy/2)) for simpsons approximation\n",
       "\n",
       "if 1 == True:\n",
       "    print 'running...'\n",
@@ -38,8 +40,11 @@
       "while frac_diff() > 10**-6 or frac_diff() == 'N/A':\n",
       "    last_total = total\n",
       "    total = 0\n",
-      "    for y in numpy.linspace (1, 100, steps+1):\n",
-      "        total += dy*(h(y+(dy/2)) + h(y-(dy/2)))/2\n",
+      "    for y in numpy.linspace (.00000001, 100, steps+2):\n",
+      "        #total += dy*(h(y+(dy/2)) + h(y-(dy/2)))/2\n",
+      "        #total += dy*h((2*y + dy)/2)\n",
+      "        #total += dy*(h(y) + h(y+dy))/2\n",
+      "        total += (dy/6)*(h(y) +h(y+dy) +4*h((2*y+dy)/2))\n",
       "    print 'number of steps:', steps\n",
       "    print 'dy =', dy\n",
       "    print 'integral =', total\n",
@@ -70,20 +75,27 @@
         "\n",
         "number of steps: 100\n",
         "dy = 1.0\n",
-        "integral = 6.46417116383\n",
+        "integral = 6.55987923862\n",
         "frac_diff = N/A\n",
         "\n",
         "\n",
         "number of steps: 200\n",
         "dy = 0.5\n",
-        "integral = 6.43547287923\n",
-        "frac_diff = 0.00445939018619 %\n",
+        "integral = 6.52647294106\n",
+        "frac_diff = 0.0051185836297 %\n",
         "\n",
         "\n",
-        "number of steps: 400\n",
+        "number of steps:"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " 400\n",
         "dy = 0.25\n",
-        "integral = 6.39445362691\n",
-        "frac_diff = 0.00641481738832 %\n",
+        "integral = 6.51017828137\n",
+        "frac_diff = 0.00250295137705 %\n",
         "\n",
         "\n",
         "number of steps:"
@@ -95,8 +107,8 @@
        "text": [
         " 800\n",
         "dy = 0.125\n",
-        "integral = 6.3661388948\n",
-        "frac_diff = 0.00444770881983 %\n",
+        "integral = 6.50205708027\n",
+        "frac_diff = 0.00124902027103 %\n",
         "\n",
         "\n",
         "number of steps:"
@@ -108,8 +120,8 @@
        "text": [
         " 1600\n",
         "dy = 0.0625\n",
-        "integral = 6.34997219284\n",
-        "frac_diff = 0.00254594846535 %\n",
+        "integral = 6.4979981309\n",
+        "frac_diff = 0.000624646127464 %\n",
         "\n",
         "\n",
         "number of steps:"
@@ -121,8 +133,8 @@
        "text": [
         " 3200\n",
         "dy = 0.03125\n",
-        "integral = 6.34138388023\n",
-        "frac_diff = 0.00135432782086 %\n",
+        "integral = 6.49596875997\n",
+        "frac_diff = 0.000312404662474 %\n",
         "\n",
         "\n",
         "number of steps:"
@@ -134,8 +146,8 @@
        "text": [
         " 6400\n",
         "dy = 0.015625\n",
-        "integral = 6.33696342537\n",
-        "frac_diff = 0.000697566731756 %\n",
+        "integral = 6.49495408101\n",
+        "frac_diff = 0.000156225732964 %\n",
         "\n",
         "\n",
         "number of steps:"
@@ -147,8 +159,8 @@
        "text": [
         " 12800\n",
         "dy = 0.0078125\n",
-        "integral = 6.33472163233\n",
-        "frac_diff = 0.000353889746561 %\n",
+        "integral = 6.49444674194\n",
+        "frac_diff = 7.81189059214e-05 %\n",
         "\n",
         "\n",
         "number of steps:"
@@ -160,8 +172,8 @@
        "text": [
         " 25600\n",
         "dy = 0.00390625\n",
-        "integral = 6.33359284655\n",
-        "frac_diff = 0.000178222031748 %\n",
+        "integral = 6.49419307242\n",
+        "frac_diff = 3.90609747454e-05 %\n",
         "\n",
         "\n",
         "number of steps:"
@@ -173,8 +185,8 @@
        "text": [
         " 51200\n",
         "dy = 0.001953125\n",
-        "integral = 6.33302648167\n",
-        "frac_diff = 8.94303668479e-05 %\n",
+        "integral = 6.49406623767\n",
+        "frac_diff = 1.95308685966e-05 %\n",
         "\n",
         "\n",
         "number of steps:"
@@ -186,8 +198,8 @@
        "text": [
         " 102400\n",
         "dy = 0.0009765625\n",
-        "integral = 6.33274280627\n",
-        "frac_diff = 4.47950282945e-05 %\n",
+        "integral = 6.49400282029\n",
+        "frac_diff = 9.76552964283e-06 %\n",
         "\n",
         "\n",
         "number of steps:"
@@ -199,8 +211,8 @@
        "text": [
         " 204800\n",
         "dy = 0.00048828125\n",
-        "integral = 6.33260084534\n",
-        "frac_diff = 2.24174762501e-05 %\n",
+        "integral = 6.4939711116\n",
+        "frac_diff = 4.88278871052e-06 %\n",
         "\n",
         "\n",
         "number of steps:"
@@ -212,8 +224,8 @@
        "text": [
         " 409600\n",
         "dy = 0.000244140625\n",
-        "integral = 6.33252983407\n",
-        "frac_diff = 1.12137288321e-05 %\n",
+        "integral = 6.49395525726\n",
+        "frac_diff = 2.4414004121e-06 %\n",
         "\n",
         "\n",
         "number of steps:"
@@ -225,8 +237,8 @@
        "text": [
         " 819200\n",
         "dy = 0.0001220703125\n",
-        "integral = 6.33249432073\n",
-        "frac_diff = 5.6081122359e-06 %\n",
+        "integral = 6.49394733009\n",
+        "frac_diff = 1.22070183998e-06 %\n",
         "\n",
         "\n",
         "number of steps:"
@@ -238,50 +250,18 @@
        "text": [
         " 1638400\n",
         "dy = 6.103515625e-05\n",
-        "integral = 6.33247656214\n",
-        "frac_diff = 2.80436833278e-06 %\n",
+        "integral = 6.4939433665\n",
+        "frac_diff = 6.10351611329e-07 %\n",
         "\n",
         "\n",
-        "number of steps:"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " 3276800\n",
-        "dy = 3.0517578125e-05\n",
-        "integral = 6.33246768235\n",
-        "frac_diff = 1.40226280571e-06 %\n",
-        "\n",
-        "\n",
-        "number of steps:"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " 6553600\n",
-        "dy = 1.52587890625e-05\n",
-        "integral = 6.33246324233\n",
-        "frac_diff = 7.01152315522e-07 %\n",
-        "\n",
-        "\n"
-       ]
-      },
-      {
-       "ename": "NameError",
-       "evalue": "name 'correct' is not defined",
-       "output_type": "pyerr",
-       "traceback": [
-        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-        "\u001b[1;32m<ipython-input-4-f7fe2fe935da>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     38\u001b[0m     \u001b[1;32mprint\u001b[0m \u001b[1;34m'\\n'\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     39\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 40\u001b[1;33m \u001b[0mactual_difference\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mabs\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcorrect_answer\u001b[0m\u001b[1;33m-\u001b[0m\u001b[0mtotal\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m/\u001b[0m\u001b[0mcorrect\u001b[0m\u001b[1;33m-\u001b[0m\u001b[0manswer\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     41\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     42\u001b[0m \u001b[1;32mprint\u001b[0m \u001b[1;34m'The integral evaluated to within specified accuracy:'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtotal\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-        "\u001b[1;31mNameError\u001b[0m: name 'correct' is not defined"
+        "The integral evaluated to within specified accuracy: 6.4939433665\n",
+        "The upper limit of its fraction error is estimated to be: 6.10351611329e-07\n",
+        "The correct answer is: 6.49393940227\n",
+        "The actual fractional error is: 6.10450721586e-07 %\n"
        ]
       }
      ],
-     "prompt_number": 4
+     "prompt_number": 20
     },
     {
      "cell_type": "code",
