--- a/StefanBoltzmann.ipynb
+++ b/StefanBoltzmann.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:bc30766f147cf3c2d6e355deb97f2015cab9b62d409ba6b02ec2cc3427ba87db"
+  "signature": "sha256:784148e9e15e4d9bb3c9f70c50729995ab675b8b43cddd52083d22b145e9b94b"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -40,7 +40,7 @@
       "while frac_diff() > 10**-6 or frac_diff() == 'N/A':\n",
       "    last_total = total\n",
       "    total = 0\n",
-      "    for y in numpy.linspace (0.0000000001, 100, steps+1):\n",
+      "    for y in numpy.linspace (0.000000001, 100, steps+1):\n",
       "        #total += dy*(h(y+(dy/2)) + h(y-(dy/2)))/2\n",
       "        #total += dy*h((2*y + dy)/2)\n",
       "        #total += dy*(h(y) + h(y+dy))/2\n",
@@ -51,7 +51,7 @@
       "    if frac_diff() == 'N/A':\n",
       "        print 'frac_diff =', frac_diff()\n",
       "    else:\n",
-      "        print 'frac_diff =', \"{:0.7f}\".format(frac_diff()),\"%\"\n",
+      "        print 'frac_diff =', \"{:0.7f}\".format(frac_diff()*100),\"%\"\n",
       "    steps *=2\n",
       "    dy /=2\n",
       "    print '\\n'\n",
@@ -59,9 +59,9 @@
       "actual_difference = abs(correct_answer-total)/correct_answer\n",
       "\n",
       "print 'The integral evaluated to within specified accuracy:', \"{:0.7f}\".format(total)\n",
-      "print 'The upper limit of its fraction error is estimated to be:', \"{:0.7f}\".format(frac_diff()),'%'\n",
+      "print 'The upper limit of its fraction error is estimated to be:', \"{:0.7f}\".format(frac_diff()*100),'%'\n",
       "print 'The correct answer is:', \"{:0.7f}\".format(correct_answer)\n",
-      "print 'The actual fractional error is:', \"{:0.7f}\".format(actual_difference),'%'"
+      "print 'The actual fractional error is:', \"{:0.7f}\".format(actual_difference*100),'%'"
      ],
      "language": "python",
      "metadata": {},
@@ -82,20 +82,13 @@
         "number of steps:  200\n",
         "dy = 0.5000\n",
         "integral = 6.4940045\n",
-        "frac_diff = 0.0001504 %\n",
+        "frac_diff = 0.0150379 %\n",
         "\n",
         "\n",
-        "number of steps:"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "  400\n",
+        "number of steps:  400\n",
         "dy = 0.2500\n",
         "integral = 6.4939435\n",
-        "frac_diff = 0.0000094 %\n",
+        "frac_diff = 0.0009399 %\n",
         "\n",
         "\n",
         "number of steps:"
@@ -108,17 +101,17 @@
         "  800\n",
         "dy = 0.1250\n",
         "integral = 6.4939397\n",
-        "frac_diff = 0.0000006 %\n",
+        "frac_diff = 0.0000587 %\n",
         "\n",
         "\n",
         "The integral evaluated to within specified accuracy: 6.4939397\n",
-        "The upper limit of its fraction error is estimated to be: 0.0000006 %\n",
+        "The upper limit of its fraction error is estimated to be: 0.0000587 %\n",
         "The correct answer is: 6.4939394\n",
-        "The actual fractional error is: 0.0000000 %\n"
+        "The actual fractional error is: 0.0000039 %\n"
        ]
       }
      ],
-     "prompt_number": 7
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
