--- a/HW2.ipynb
+++ b/HW2.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:296d6ff2c798bab7687ed97da074cb0dceb2a4c847e73b5cc97ea9019926f920"
+  "signature": "sha256:72a400c5e358d8ca9b942966883cd7b3c87c60456bd1ff83ee94ade7c4a638a7"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -51,7 +51,7 @@
       "    if frac_diff() == 'N/A':\n",
       "        print 'frac_diff =', frac_diff()\n",
       "    else:\n",
-      "        print 'frac_diff =', \"{:0.7f}\".format(frac_diff()),\"%\"\n",
+      "        print 'frac_diff =', \"{:0.7f}\".format(frac_diff()*100),\"%\"\n",
       "    steps *=2\n",
       "    dy /=2\n",
       "    print '\\n'\n",
@@ -77,16 +77,19 @@
       "If t is an integer, program computes (t-1)! directly.\n",
       "If t is a float, calculates the integral form of the gamma funciton\n",
       "\n",
+      ">>> gamma(5) = 24\n",
+      "\n",
       "\n",
       "'''\n",
       "\n",
       "from math import *\n",
-      "import numpy as np\n",
+      "import numpy\n",
       "import pdb\n",
       "\n",
       "total = 0\n",
       "last_total = 0\n",
       "dx = 1.\n",
+      "frac = ''\n",
       "\n",
       "def h(x):\n",
       "    return (x**(t-1))*(e**(-x))\n",
@@ -98,21 +101,46 @@
       "        return abs(total-last_total)/total\n",
       "\n",
       "def gamma(t):\n",
-      "    if t => 1:\n",
+      "    if 100 >= t >= 1:\n",
       "        if type(t) == int:\n",
       "            return factorial(t-1)\n",
       "        if type(t) == float:\n",
+      "            frac = 'yes'\n",
       "            total = 0\n",
       "            for x in numpy.linspace (0.00000001, 1000, 1001):\n",
       "                total += (dx/6)*(h(x) +h(x+dx) +4*h((2*x+dx)/2))\n",
       "                if x == 999:\n",
+      "                    global last_total\n",
       "                    last_total = total\n",
-      "            \n",
-      "            return total"
+      "            return total\n",
+      "    else:\n",
+      "        return 'Please enter a value between 1 and 100.'\n",
+      "    \n",
+      "    \n",
+      "t = 5.2\n",
+      "print 'Gamma of',t,'is:',gamma(t)\n",
+      "if frac == 'yes':\n",
+      "    frac_diff()"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " Gamma of 5.2 is: "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "32.5774098517\n"
+       ]
+      }
+     ],
+     "prompt_number": 8
     }
    ],
    "metadata": {}
