--- a/HW2.ipynb
+++ b/HW2.ipynb
@@ -1,149 +1,287 @@
 {
- "metadata": {
-  "name": "",
-  "signature": "sha256:72a400c5e358d8ca9b942966883cd7b3c87c60456bd1ff83ee94ade7c4a638a7"
- },
- "nbformat": 3,
- "nbformat_minor": 0,
- "worksheets": [
+ "cells": [
   {
-   "cells": [
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from math import *\n",
+    "import numpy\n",
+    "dy = 1.\n",
+    "steps = 100\n",
+    "total = 0\n",
+    "last_total = 0\n",
+    "def h(y):\n",
+    "    return (y**3)/((e**y)-1)\n",
+    "frac_diff = 0\n",
+    "correct_answer = (pi**4)/15\n",
+    "\n",
+    "def frac_diff():\n",
+    "    if last_total == 0:\n",
+    "        return 'N/A'\n",
+    "    else:\n",
+    "        return abs(total-last_total)/total\n",
+    "\n",
+    "# integral = dy*(h(y+(dy/2)) + h(y-(dy/2))/2 for trapezoidal approximation\n",
+    "# integral = dy*(h(y+dy/2)) for rectaungular\n",
+    "# integral = (dy/6)*(h(y) +h(y+dy) +4*(2y+dy/2)) for simpsons approximation\n",
+    "\n",
+    "if 1 == True:\n",
+    "    print 'running...'\n",
+    "    print '\\n'\n",
+    "\n",
+    "while frac_diff() > 10**-6 or frac_diff() == 'N/A':\n",
+    "    last_total = total\n",
+    "    total = 0\n",
+    "    for y in numpy.linspace (0.0000000001, 100, steps+1):\n",
+    "        #total += dy*(h(y+(dy/2)) + h(y-(dy/2)))/2\n",
+    "        #total += dy*h((2*y + dy)/2)\n",
+    "        #total += dy*(h(y) + h(y+dy))/2\n",
+    "        total += (dy/6)*(h(y) +h(y+dy) +4*h((2*y+dy)/2))\n",
+    "    print 'number of steps:', \"{:4.0f}\".format(steps)\n",
+    "    print 'dy =', \"{:0.4f}\".format(dy)\n",
+    "    print 'integral =', \"{:0.7f}\".format(total)\n",
+    "    if frac_diff() == 'N/A':\n",
+    "        print 'frac_diff =', frac_diff()\n",
+    "    else:\n",
+    "        print 'frac_diff =', \"{:0.7f}\".format(frac_diff()*100),\"%\"\n",
+    "    steps *=2\n",
+    "    dy /=2\n",
+    "    print '\\n'\n",
+    "    \n",
+    "actual_difference = abs(correct_answer-total)/correct_answer\n",
+    "\n",
+    "print 'The integral evaluated to within specified accuracy:', \"{:0.7f}\".format(total)\n",
+    "print 'The upper limit of its fraction error is estimated to be:', \"{:0.7f}\".format(frac_diff()),'%'\n",
+    "print 'The correct answer is:', \"{:0.7f}\".format(correct_answer)\n",
+    "print 'The actual fractional error is:', \"{:0.7f}\".format(actual_difference),'%'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
     {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "from math import *\n",
-      "import numpy\n",
-      "dy = 1.\n",
-      "steps = 100\n",
-      "total = 0\n",
-      "last_total = 0\n",
-      "def h(y):\n",
-      "    return (y**3)/((e**y)-1)\n",
-      "frac_diff = 0\n",
-      "correct_answer = (pi**4)/15\n",
-      "\n",
-      "def frac_diff():\n",
-      "    if last_total == 0:\n",
-      "        return 'N/A'\n",
-      "    else:\n",
-      "        return abs(total-last_total)/total\n",
-      "\n",
-      "# integral = dy*(h(y+(dy/2)) + h(y-(dy/2))/2 for trapezoidal approximation\n",
-      "# integral = dy*(h(y+dy/2)) for rectaungular\n",
-      "# integral = (dy/6)*(h(y) +h(y+dy) +4*(2y+dy/2)) for simpsons approximation\n",
-      "\n",
-      "if 1 == True:\n",
-      "    print 'running...'\n",
-      "    print '\\n'\n",
-      "\n",
-      "while frac_diff() > 10**-6 or frac_diff() == 'N/A':\n",
-      "    last_total = total\n",
-      "    total = 0\n",
-      "    for y in numpy.linspace (0.0000000001, 100, steps+1):\n",
-      "        #total += dy*(h(y+(dy/2)) + h(y-(dy/2)))/2\n",
-      "        #total += dy*h((2*y + dy)/2)\n",
-      "        #total += dy*(h(y) + h(y+dy))/2\n",
-      "        total += (dy/6)*(h(y) +h(y+dy) +4*h((2*y+dy)/2))\n",
-      "    print 'number of steps:', \"{:4.0f}\".format(steps)\n",
-      "    print 'dy =', \"{:0.4f}\".format(dy)\n",
-      "    print 'integral =', \"{:0.7f}\".format(total)\n",
-      "    if frac_diff() == 'N/A':\n",
-      "        print 'frac_diff =', frac_diff()\n",
-      "    else:\n",
-      "        print 'frac_diff =', \"{:0.7f}\".format(frac_diff()*100),\"%\"\n",
-      "    steps *=2\n",
-      "    dy /=2\n",
-      "    print '\\n'\n",
-      "    \n",
-      "actual_difference = abs(correct_answer-total)/correct_answer\n",
-      "\n",
-      "print 'The integral evaluated to within specified accuracy:', \"{:0.7f}\".format(total)\n",
-      "print 'The upper limit of its fraction error is estimated to be:', \"{:0.7f}\".format(frac_diff()),'%'\n",
-      "print 'The correct answer is:', \"{:0.7f}\".format(correct_answer)\n",
-      "print 'The actual fractional error is:', \"{:0.7f}\".format(actual_difference),'%'"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "'''\n",
-      "\n",
-      "Program computes gamma(t) for t greater or equal to one. \n",
-      "If t is an integer, program computes (t-1)! directly.\n",
-      "If t is a float, calculates the integral form of the gamma funciton\n",
-      "\n",
-      ">>> gamma(5) = 24\n",
-      "\n",
-      "\n",
-      "'''\n",
-      "\n",
-      "from math import *\n",
-      "import numpy\n",
-      "import pdb\n",
-      "\n",
-      "total = 0\n",
-      "last_total = 0\n",
-      "dx = 1.\n",
-      "frac = ''\n",
-      "\n",
-      "def h(x):\n",
-      "    return (x**(t-1))*(e**(-x))\n",
-      "\n",
-      "def frac_diff():\n",
-      "    if last_total == 0:\n",
-      "        return 'N/A'\n",
-      "    else:\n",
-      "        return abs(total-last_total)/total\n",
-      "\n",
-      "def gamma(t):\n",
-      "    if 100 >= t >= 1:\n",
-      "        if type(t) == int:\n",
-      "            return factorial(t-1)\n",
-      "        if type(t) == float:\n",
-      "            frac = 'yes'\n",
-      "            total = 0\n",
-      "            for x in numpy.linspace (0.00000001, 1000, 1001):\n",
-      "                total += (dx/6)*(h(x) +h(x+dx) +4*h((2*x+dx)/2))\n",
-      "                if x == 999:\n",
-      "                    global last_total\n",
-      "                    last_total = total\n",
-      "            return total\n",
-      "    else:\n",
-      "        return 'Please enter a value between 1 and 100.'\n",
-      "    \n",
-      "    \n",
-      "t = 5.2\n",
-      "print 'Gamma of',t,'is:',gamma(t)\n",
-      "if frac == 'yes':\n",
-      "    frac_diff()"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " Gamma of 5.2 is: "
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "32.5774098517\n"
-       ]
-      }
-     ],
-     "prompt_number": 8
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gamma of 5.2 is: 32.5774098517\n"
+     ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "'''\n",
+    "\n",
+    "Program computes gamma(t) for t greater or equal to one. \n",
+    "If t is an integer, program computes (t-1)! directly.\n",
+    "If t is a float, calculates the integral form of the gamma funciton\n",
+    "\n",
+    ">>> gamma(5) - 24 < 1e-4\n",
+    "True\n",
+    "\n",
+    "\n",
+    "\n",
+    "'''\n",
+    "\n",
+    "from math import *\n",
+    "import numpy\n",
+    "import pdb\n",
+    "\n",
+    "total = 0\n",
+    "last_total = 0\n",
+    "dx = 1.\n",
+    "frac = ''\n",
+    "\n",
+    "def h(x):\n",
+    "    return (x**(t-1))*(e**(-x))\n",
+    "\n",
+    "def frac_diff():\n",
+    "    if last_total == 0:\n",
+    "        return 'N/A'\n",
+    "    else:\n",
+    "        return abs(total-last_total)/total\n",
+    "\n",
+    "def gamma(t):\n",
+    "    if 100 >= t >= 1:\n",
+    "        if type(t) == int:\n",
+    "            return factorial(t-1)\n",
+    "        if type(t) == float:\n",
+    "            frac = 'yes'\n",
+    "            total = 0\n",
+    "            for x in numpy.linspace (0.00000001, 1000, 1001):\n",
+    "                total += (dx/6)*(h(x) +h(x+dx) +4*h((2*x+dx)/2))\n",
+    "                if x == 999:\n",
+    "                    global last_total\n",
+    "                    last_total = total\n",
+    "            return total\n",
+    "    else:\n",
+    "        return 'Please enter a value between 1 and 100.'\n",
+    "    \n",
+    "if __name__ ==\"__main__\":\n",
+    "    import doctest\n",
+    "    doctest.testmod()    \n",
+    "    t = 5.2\n",
+    "    print 'Gamma of',t,'is:',gamma(t)\n",
+    "    if frac == 'yes':\n",
+    "        frac_diff()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ranked by Distance\n",
+      "('Ross 154', 9.4)\n",
+      "('Sirius A', 8.6)\n",
+      "('Sirius B', 8.6)\n",
+      "('Luyten 726-8 A', 8.4)\n",
+      "('Luyten 726-8 B', 8.4)\n",
+      "('BD +36 degrees 2147', 8.2)\n",
+      "('Wolf 359', 7.7)\n",
+      "(\"Barnard's Star\", 6.0)\n",
+      "('Alpha Centauri A', 4.3)\n",
+      "('Alpha Centauri B', 4.3)\n",
+      "('Alpha Centauri C', 4.2)\n",
+      "\n",
+      "\n",
+      "Ranked by Apparent Brightness\n",
+      "('Sirius A', 1.0)\n",
+      "('Alpha Centauri A', 0.26)\n",
+      "('Alpha Centauri B', 0.077)\n",
+      "('Sirius B', 0.001)\n",
+      "('BD +36 degrees 2147', 0.0003)\n",
+      "(\"Barnard's Star\", 4e-05)\n",
+      "('Ross 154', 2e-05)\n",
+      "('Alpha Centauri C', 1e-05)\n",
+      "('Luyten 726-8 A', 3e-06)\n",
+      "('Luyten 726-8 B', 2e-06)\n",
+      "('Wolf 359', 1e-06)\n",
+      "\n",
+      "\n",
+      "Ranked by Absolute Brightness\n",
+      "('Sirius A', 23.6)\n",
+      "('Alpha Centauri A', 1.56)\n",
+      "('Alpha Centauri B', 0.45)\n",
+      "('BD +36 degrees 2147', 0.006)\n",
+      "('Sirius B', 0.003)\n",
+      "(\"Barnard's Star\", 0.0005)\n",
+      "('Ross 154', 0.0005)\n",
+      "('Alpha Centauri C', 6e-05)\n",
+      "('Luyten 726-8 A', 6e-05)\n",
+      "('Luyten 726-8 B', 4e-05)\n",
+      "('Wolf 359', 2e-05)\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "'''\n",
+    "\n",
+    "Program takes list of 4-tuples, containing star names, distance,\n",
+    "apparent and absoulte brightness and sorts it into three tables:\n",
+    "name vs. distance, name vs. apparent brightness, and name vs absolute brightness.\n",
+    "\n",
+    "\n",
+    "'''\n",
+    "from pprint import pprint\n",
+    "\n",
+    "def dist_key(item):\n",
+    "    return item[1]\n",
+    "\n",
+    "def app_key(item):\n",
+    "    return item[2]\n",
+    "\n",
+    "def abs_key(item):\n",
+    "    return item[3]\n",
+    "\n",
+    "\n",
+    "\n",
+    "data = [\n",
+    "('Alpha Centauri A', 4.3, 0.26, 1.56),\n",
+    "('Alpha Centauri B', 4.3, 0.077, 0.45),\n",
+    "('Alpha Centauri C', 4.2, 0.00001, 0.00006),\n",
+    "(\"Barnard's Star\", 6.0, 0.00004, 0.0005),\n",
+    "('Wolf 359', 7.7, 0.000001, 0.00002),\n",
+    "('BD +36 degrees 2147', 8.2, 0.0003, 0.006),\n",
+    "('Luyten 726-8 A', 8.4, 0.000003, 0.00006),\n",
+    "('Luyten 726-8 B', 8.4, 0.000002, 0.00004),\n",
+    "('Sirius A', 8.6, 1.00, 23.6),\n",
+    "('Sirius B', 8.6, 0.001, 0.003),\n",
+    "('Ross 154', 9.4, 0.00002, 0.0005),\n",
+    "]\n",
+    "\n",
+    "\n",
+    "def distance():\n",
+    "    a = (sorted(data, key = dist_key, reverse = True))\n",
+    "    print 'Ranked by Distance'\n",
+    "    for i in range(0, len(data)):\n",
+    "        print(a[i][0], a[i][1])\n",
+    "    print '\\n'\n",
+    "\n",
+    "def apparent():\n",
+    "    b = sorted(data, key = app_key, reverse = True)\n",
+    "    print 'Ranked by Apparent Brightness'\n",
+    "    for i in range(0, len(data)):\n",
+    "        print(b[i][0], b[i][2])\n",
+    "    print '\\n'\n",
+    "\n",
+    "def absolute():\n",
+    "    c = sorted(data, key = abs_key, reverse = True)\n",
+    "    print 'Ranked by Absolute Brightness'\n",
+    "    for i in range(0, len(data)):\n",
+    "        print(c[i][0], c[i][3])\n",
+    "    print '\\n'\n",
+    "\n",
+    "distance()\n",
+    "apparent()\n",
+    "absolute()\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
- ]
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 2",
+   "language": "python",
+   "name": "python2"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 2
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython2",
+   "version": "2.7.9"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 0
 }
