--- a/HW2.ipynb
+++ b/HW2.ipynb
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -144,45 +144,17 @@
      "output_type": "stream",
      "text": [
       "Ranked by Distance\n",
-      "('Ross 154', 9.4)\n",
-      "('Sirius A', 8.6)\n",
-      "('Sirius B', 8.6)\n",
-      "('Luyten 726-8 A', 8.4)\n",
-      "('Luyten 726-8 B', 8.4)\n",
-      "('BD +36 degrees 2147', 8.2)\n",
-      "('Wolf 359', 7.7)\n",
-      "(\"Barnard's Star\", 6.0)\n",
-      "('Alpha Centauri A', 4.3)\n",
-      "('Alpha Centauri B', 4.3)\n",
-      "('Alpha Centauri C', 4.2)\n",
-      "\n",
-      "\n",
-      "Ranked by Apparent Brightness\n",
-      "('Sirius A', 1.0)\n",
-      "('Alpha Centauri A', 0.26)\n",
-      "('Alpha Centauri B', 0.077)\n",
-      "('Sirius B', 0.001)\n",
-      "('BD +36 degrees 2147', 0.0003)\n",
-      "(\"Barnard's Star\", 4e-05)\n",
-      "('Ross 154', 2e-05)\n",
-      "('Alpha Centauri C', 1e-05)\n",
-      "('Luyten 726-8 A', 3e-06)\n",
-      "('Luyten 726-8 B', 2e-06)\n",
-      "('Wolf 359', 1e-06)\n",
-      "\n",
-      "\n",
-      "Ranked by Absolute Brightness\n",
-      "('Sirius A', 23.6)\n",
-      "('Alpha Centauri A', 1.56)\n",
-      "('Alpha Centauri B', 0.45)\n",
-      "('BD +36 degrees 2147', 0.006)\n",
-      "('Sirius B', 0.003)\n",
-      "(\"Barnard's Star\", 0.0005)\n",
-      "('Ross 154', 0.0005)\n",
-      "('Alpha Centauri C', 6e-05)\n",
-      "('Luyten 726-8 A', 6e-05)\n",
-      "('Luyten 726-8 B', 4e-05)\n",
-      "('Wolf 359', 2e-05)\n",
+      "['Ross 154', 9.4]\n",
+      "['Sirius A', 8.6]\n",
+      "['Sirius B', 8.6]\n",
+      "['Luyten 726-8 A', 8.4]\n",
+      "['Luyten 726-8 B', 8.4]\n",
+      "['BD +36 degrees 2147', 8.2]\n",
+      "['Wolf 359', 7.7]\n",
+      "[\"Barnard's Star\", 6.0]\n",
+      "['Alpha Centauri A', 4.3]\n",
+      "['Alpha Centauri B', 4.3]\n",
+      "['Alpha Centauri C', 4.2]\n",
       "\n",
       "\n"
      ]
@@ -208,7 +180,8 @@
     "def abs_key(item):\n",
     "    return item[3]\n",
     "\n",
-    "\n",
+    "left = []\n",
+    "right = []\n",
     "\n",
     "data = [\n",
     "('Alpha Centauri A', 4.3, 0.26, 1.56),\n",
@@ -225,11 +198,18 @@
     "]\n",
     "\n",
     "\n",
+    "#def distance():\n",
+    "    #a = (sorted(data, key = dist_key, reverse = True))\n",
+    "    #print 'Ranked by Distance'\n",
+    "    #for i in range(0, len(data)):\n",
+    "        #print(a[i][0], a[i][1])\n",
+    "    #print '\\n'\n",
+    "\n",
+    "    \n",
     "def distance():\n",
     "    a = (sorted(data, key = dist_key, reverse = True))\n",
     "    print 'Ranked by Distance'\n",
-    "    for i in range(0, len(data)):\n",
-    "        print(a[i][0], a[i][1])\n",
+    "    [pprint([a[i][0], a[i][1]]) for i in range(0, len(data))]\n",
     "    print '\\n'\n",
     "\n",
     "def apparent():\n",
@@ -247,8 +227,8 @@
     "    print '\\n'\n",
     "\n",
     "distance()\n",
-    "apparent()\n",
-    "absolute()\n",
+    "#apparent()\n",
+    "#absolute()\n",
     "\n",
     "\n"
    ]
