--- a/HW2.ipynb
+++ b/HW2.ipynb
@@ -62,79 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Gamma of 5.2 is: 32.5774098517\n"
-     ]
-    }
-   ],
-   "source": [
-    "'''\n",
-    "\n",
-    "Program computes gamma(t) for t greater or equal to one. \n",
-    "If t is an integer, program computes (t-1)! directly.\n",
-    "If t is a float, calculates the integral form of the gamma funciton\n",
-    "\n",
-    ">>> gamma(5) - 24 < 1e-4\n",
-    "True\n",
-    "\n",
-    "\n",
-    "\n",
-    "'''\n",
-    "\n",
-    "from math import *\n",
-    "import numpy\n",
-    "import pdb\n",
-    "\n",
-    "total = 0\n",
-    "last_total = 0\n",
-    "dx = 1.\n",
-    "frac = ''\n",
-    "\n",
-    "def h(x):\n",
-    "    return (x**(t-1))*(e**(-x))\n",
-    "\n",
-    "def frac_diff():\n",
-    "    if last_total == 0:\n",
-    "        return 'N/A'\n",
-    "    else:\n",
-    "        return abs(total-last_total)/total\n",
-    "\n",
-    "def gamma(t):\n",
-    "    if 100 >= t >= 1:\n",
-    "        if type(t) == int:\n",
-    "            return factorial(t-1)\n",
-    "        if type(t) == float:\n",
-    "            frac = 'yes'\n",
-    "            total = 0\n",
-    "            for x in numpy.linspace (0.00000001, 1000, 1001):\n",
-    "                total += (dx/6)*(h(x) +h(x+dx) +4*h((2*x+dx)/2))\n",
-    "                if x == 999:\n",
-    "                    global last_total\n",
-    "                    last_total = total\n",
-    "            return total\n",
-    "    else:\n",
-    "        return 'Please enter a value between 1 and 100.'\n",
-    "    \n",
-    "if __name__ ==\"__main__\":\n",
-    "    import doctest\n",
-    "    doctest.testmod()    \n",
-    "    t = 5.2\n",
-    "    print 'Gamma of',t,'is:',gamma(t)\n",
-    "    if frac == 'yes':\n",
-    "        frac_diff()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -209,7 +137,10 @@
     "def distance():\n",
     "    a = (sorted(data, key = dist_key, reverse = True))\n",
     "    print 'Ranked by Distance'\n",
-    "    [pprint([a[i][0], a[i][1]]) for i in range(0, len(data))]\n",
+    "    #[pprint([a[i][0], a[i][1]]) for i in range(0, len(data))]\n",
+    "    alpha =[([a[i][0], a[i][1]]) for i in range(0, len(data))]\n",
+    "    for uno, dos in alpha:\n",
+    "        pprint([uno, dos])\n",
     "    print '\\n'\n",
     "\n",
     "def apparent():\n",
@@ -235,12 +166,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": true
+    "collapsed": false,
+    "scrolled": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gamma of 3.5 is: 3.32335043007\n",
+      "frac_diff ="
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "Unknown format code 'f' for object of type 'str'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-6-6fa7ab5b685a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     60\u001b[0m     \u001b[1;32mprint\u001b[0m \u001b[1;34m'Gamma of'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mt\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'is:'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mgamma\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mt\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     61\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mfrac\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m'yes'\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 62\u001b[1;33m         \u001b[1;32mprint\u001b[0m \u001b[1;34m'frac_diff ='\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"{:0.7f}\"\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfrac_diff\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m*\u001b[0m\u001b[1;36m100\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"%\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     63\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: Unknown format code 'f' for object of type 'str'"
+     ]
+    }
+   ],
+   "source": [
+    "'''\n",
+    "\n",
+    "Program computes gamma(t) for t greater or equal to one. \n",
+    "If t is an integer, program computes (t-1)! directly.\n",
+    "If t is a float, calculates the integral form of the gamma funciton\n",
+    "\n",
+    ">>> abs(abs(gamma(5)) - 24) < 1e-4\n",
+    "True\n",
+    "\n",
+    ">>> abs(abs(gamma(4)) - 6) < 1e-4\n",
+    "True\n",
+    "\n",
+    ">>> abs(abs(gamma(5./2)) - 1.3293403) < 1e-4\n",
+    "True\n",
+    "\n",
+    ">>> abs(abs(gamma(7./2)) - 3.3233509) < 1e-4\n",
+    "True\n",
+    "\n",
+    "\n",
+    "\n",
+    "'''\n",
+    "\n",
+    "from math import *\n",
+    "import numpy\n",
+    "import pdb\n",
+    "total = 0\n",
+    "last_total = 0\n",
+    "dx = .1\n",
+    "frac = ''\n",
+    "\n",
+    "def h(x,t):\n",
+    "    return (x**(t-1))*(e**(-x))\n",
+    "\n",
+    "def frac_diff():\n",
+    "    if last_total == 0:\n",
+    "        return 'N/A'\n",
+    "    else:\n",
+    "        return abs(total-last_total)/total\n",
+    "\n",
+    "def gamma(t):\n",
+    "    if 100 >= t >= 1:\n",
+    "        if type(t) == int:\n",
+    "            return factorial(t-1)\n",
+    "        if type(t) == float:\n",
+    "            global frac\n",
+    "            frac = 'yes'\n",
+    "            total = 0\n",
+    "            for x in numpy.linspace (0, 1000, 10001):\n",
+    "                total += (dx/6)*(h(x,t) +h(x+dx,t) +4*h((2*x+dx)/2,t))\n",
+    "                if x == 900:\n",
+    "                    last_total = total\n",
+    "            return float(total)\n",
+    "    else:\n",
+    "        return 'Please enter a value between 1 and 100.'\n",
+    "    \n",
+    "if __name__ ==\"__main__\":\n",
+    "    t = (7./2)\n",
+    "    import doctest\n",
+    "    doctest.testmod()    \n",
+    "    print 'Gamma of',t,'is:',gamma(t)\n",
+    "    if frac == 'yes':\n",
+    "        print 'frac_diff =', \"{:0.7f}\".format(frac_diff()*100),\"%\"\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
