--- a/HW2.ipynb
+++ b/HW2.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -83,6 +83,34 @@
       "['Alpha Centauri A', 4.3]\n",
       "['Alpha Centauri B', 4.3]\n",
       "['Alpha Centauri C', 4.2]\n",
+      "\n",
+      "\n",
+      "Ranked by Apparent Brightness\n",
+      "['Sirius A', 1.0]\n",
+      "['Alpha Centauri A', 0.26]\n",
+      "['Alpha Centauri B', 0.077]\n",
+      "['Sirius B', 0.001]\n",
+      "['BD +36 degrees 2147', 0.0003]\n",
+      "[\"Barnard's Star\", 4e-05]\n",
+      "['Ross 154', 2e-05]\n",
+      "['Alpha Centauri C', 1e-05]\n",
+      "['Luyten 726-8 A', 3e-06]\n",
+      "['Luyten 726-8 B', 2e-06]\n",
+      "['Wolf 359', 1e-06]\n",
+      "\n",
+      "\n",
+      "Ranked by Absolute Brightness\n",
+      "['Sirius A', 23.6]\n",
+      "['Alpha Centauri A', 1.56]\n",
+      "['Alpha Centauri B', 0.45]\n",
+      "['BD +36 degrees 2147', 0.006]\n",
+      "['Sirius B', 0.003]\n",
+      "[\"Barnard's Star\", 0.0005]\n",
+      "['Ross 154', 0.0005]\n",
+      "['Alpha Centauri C', 6e-05]\n",
+      "['Luyten 726-8 A', 6e-05]\n",
+      "['Luyten 726-8 B', 4e-05]\n",
+      "['Wolf 359', 2e-05]\n",
       "\n",
       "\n"
      ]
@@ -146,20 +174,22 @@
     "def apparent():\n",
     "    b = sorted(data, key = app_key, reverse = True)\n",
     "    print 'Ranked by Apparent Brightness'\n",
-    "    for i in range(0, len(data)):\n",
-    "        print(b[i][0], b[i][2])\n",
+    "    alpha =[([b[i][0], b[i][2]]) for i in range(0, len(data))]\n",
+    "    for uno, dos in alpha:\n",
+    "        pprint([uno, dos])\n",
     "    print '\\n'\n",
     "\n",
     "def absolute():\n",
     "    c = sorted(data, key = abs_key, reverse = True)\n",
     "    print 'Ranked by Absolute Brightness'\n",
-    "    for i in range(0, len(data)):\n",
-    "        print(c[i][0], c[i][3])\n",
+    "    alpha =[([c[i][0], c[i][3]]) for i in range(0, len(data))]\n",
+    "    for uno, dos in alpha:\n",
+    "        pprint([uno, dos])\n",
     "    print '\\n'\n",
     "\n",
     "distance()\n",
-    "#apparent()\n",
-    "#absolute()\n",
+    "apparent()\n",
+    "absolute()\n",
     "\n",
     "\n"
    ]
